# pkms

./: .gitignore  Makefile  README.md  activate.ps1  justfile  pyproject.toml  pytest.toml
.beads/: issues.jsonl
asset/icon/: favicon-guide.md  favicon-prompt.md
doc/: about-libinfo.md  adr.md  commit-guidline.md  component-author-guide-zht.md  conventional-commit-decision.md  development.md  how-to-run.md  note-potential-tech.md  pkms-app-config-example.jsonc  pkms-architecture-overview.md  pkms-security-baseline.md  psuedo.py  schema.md  tree-structure.md
doc/adr/: ADR-0001--use-sql-ite-as-the-primary-storage-engine-v1.md  ADR-0002--separate-identity-into-file-id-file-uid-and-internal-seq-id.md  ADR-0003--treat-indexed-document-as-a-stable-contract-boundary.md  ADR-0004--snapshot-vs-editable-as-a-first-class-classification.md  ADR-0005--use-uri-instead-of-path-in-persistent-models.md  ADR-0006--modular-pipeline-globber-indexer-upserter.md  ADR-0007--configuration-as-data-not-code.md  ADR-0008--prefer-explicit-metadata-over-implicit-heuristics.md  ADR-0009--adr-filename-convention-with-explicit-delimiter.md  ADR-0010--adr-document-title-should-start-with-explicit-adr-id.md  README.md  (+20 more)
doc/design/: future.md  (+10 more)
script/: export_repo_to_markdown.py  generate_component_init.py  lib_sync.py  lib_verify.py  normalize_adr_filenames.py  normalize_html_filenames.py  reformat_html_filenames.py  ticket.md  ticket.py  verify_component_init.py  verify_libinfo.py
spike/: index_singlefile_html.py  ingest.py  ingest_collections.py  multihost.py  pkms_db_upsert.py  uri_handler.py
(+178 files in other folders)
