[project]
name = "pkms"
version = "0.0.1"
description = "PKMS the Personal Knowledge Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "commentjson>=0.9.0,<0.10.0",
    "fastapi>=0.128.0,<0.129",
    "inscriptis>=2.7.0",
    "loguru>=0.7.3",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0,<0.6.0",
    "pathspec>=1.0.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0,<0.41",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
